syntax = "proto3";

package i18n;

option go_package = "github.com/nmxmxh/master-ovasabi/api/protos/i18n";

// I18nService provides internationalization and localization support
service I18nService {
  // GetTranslation retrieves a translation for a given key and locale
  rpc GetTranslation(GetTranslationRequest) returns (GetTranslationResponse) {}
  // GetSupportedLocales returns all supported locales
  rpc GetSupportedLocales(GetSupportedLocalesRequest) returns (GetSupportedLocalesResponse) {}
}

// GetTranslationRequest contains the translation key and locale
message GetTranslationRequest {
  string key = 1;
  string locale = 2;
  map<string, string> params = 3;
}

// GetTranslationResponse contains the translated text
message GetTranslationResponse {
  string text = 1;
  string locale = 2;
}

// GetSupportedLocalesRequest is an empty request
message GetSupportedLocalesRequest {}

// GetSupportedLocalesResponse contains supported locales
message GetSupportedLocalesResponse {
  repeated string locales = 1;
  string default_locale = 2;
} 